# icfp-language

./: LICENSE  flake.nix  icfp-language.cabal
app/: Main.hs
data/: a-language_test.md  a-scoreboard.txt  a01.txt  lambdaman.txt  lambdamazes.txt  q-echo.txt  q-scoreboard.txt  q03.txt  q04.txt  spaceship.txt
data/3d/: 3d.md
data/efficiency/: efficiency1.md  efficiency10.md  efficiency11.md  efficiency12.md  efficiency13.md  efficiency2.md  efficiency3.md  efficiency4.md  efficiency5.md  efficiency6.md  efficiency7.md  efficiency8.md  efficiency9.md
data/lambdaman/: lambdaman.md
data/spaceship/: spaceship.md
src/: Efficiency.hs  Eval.hs  Lib.hs  Parser.hs  Types.hs
src/Eval/: CallByNeed.hs
test/: Main.hs
