cabal-version: 3.0
name:          icfp-language
version:       0.0.0.0
build-type:    Simple

common defaults
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    OverloadedStrings

common warnings
  ghc-options:
    -Wall -Wextra -Weverything -Wcompat -Wno-implicit-prelude
    -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-missing-import-lists -haddock

library
  import:          defaults, warnings
  exposed-modules:
    Efficiency
    Eval
    Eval.CallByNeed
    Lib
    Parser
    Types

  build-depends:
    , base               >=4.7   && <5
    , containers         >=0.6.7
    , megaparsec         >=9.6.1
    , mtl
    , text               >=2.1
    , vector
    , vector-hashtables

  hs-source-dirs:  src

executable icfp-language
  import:         defaults, warnings
  main-is:        Main.hs
  build-depends:
    , base           >=4.7 && <5
    , icfp-language
    , lens           >=5
    , text           >=2.1
    , wreq           >=0.5

  hs-source-dirs: app

test-suite icfp-language-test
  import:         defaults, warnings
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , base              >=4.7  && <5
    , icfp-language
    , QuickCheck        >=2.15
    , tasty             >=1.5
    , tasty-hunit       >=0.10
    , tasty-quickcheck  >=0.11
